--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
     <head>
         <meta charset="UTF-8">
         <title>zServiceAdvisor</title>
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
         <!-- <base href="/"> -->
     </head>
-    <body ng-app="myApp">
+    <body class="main-container">
         <app></app>
     </body>
 </html>
