add report-detail and common table component

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
         <!-- <base href="/"> -->
     </head>
-    <body class="main-container">
+    <body class="body-container">
         <app></app>
     </body>
 </html>
