--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>zServiceAdvisor</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <!-- <base href="/"> -->
     </head>
     <body class="body-container">
